==> sonocotta/esparagus-snapclient/components/audio_hal/driver/es8388/es8388.c <==
#include "es8388.h"
#include <string.h>
#include "audio_volume.h"
#include "board.h"
#include "esp_log.h"
#include "i2c_bus.h"
#include "headphone_detect.h"
#define ES8388_DAC_VOL_CFG_DEFAULT()                            \
  {                                                             \
    .max_dac_volume = 0, .min_dac_volume = -96,                 \
    .board_pa_gain = BOARD_PA_GAIN, .volume_accuracy = 0.5,     \
    .dac_vol_symbol = -1, .zero_volume_reg = 0, .reg_value = 0, \
    .user_volume = 0, .offset_conv_volume = NULL,               \
  }
#define ES_ASSERT(a, format, b, ...)         \
  if ((a) != 0) {                            \
    ESP_LOGE(ES_TAG, format, ##__VA_ARGS__); \
    return b;                                \
  }

static esp_err_t es_read_reg(uint8_t reg_add, uint8_t *p_data) {
  return i2c_bus_read_bytes(i2c_handle, ES8388_ADDR, &reg_add, sizeof(reg_add),
                            p_data, 1);
}

esp_err_t es8388_write_reg(uint8_t reg_add, uint8_t data) {
  return es_write_reg(ES8388_ADDR, reg_add, data);
}

esp_err_t es8388_start(es_module_t mode) {
  esp_err_t res = ESP_OK;
  uint8_t prev_data = 0, data = 0;
  es_read_reg(ES8388_DACCONTROL21, &prev_data);
  if (mode == ES_MODULE_LINE) {
    res |= es_write_reg(
        ES8388_ADDR, ES8388_DACCONTROL16,
        0x09);  // 0x00 audio on LIN1&RIN1,  0x09 LIN2&RIN2 by pass enable
    res |=
        es_write_reg(ES8388_ADDR, ES8388_DACCONTROL17,
                     0x50);  // left DAC to left mixer enable  and  LIN signal
                             // to left mixer enable 0db  : bupass enable
    res |=
        es_write_reg(ES8388_ADDR, ES8388_DACCONTROL20,
                     0x50);  // right DAC to right mixer enable  and  LIN signal
                             // to right mixer enable 0db : bupass enable
    res |= es_write_reg(ES8388_ADDR, ES8388_DACCONTROL21, 0xC0);  // enable adc
  } else {
    res |= es_write_reg(ES8388_ADDR, ES8388_DACCONTROL21, 0x80);  // enable dac
  }
  es_read_reg(ES8388_DACCONTROL21, &data);
  if (prev_data != data) {
    res |= es_write_reg(ES8388_ADDR, ES8388_CHIPPOWER,
                        0xF0);  // start state machine
    // res |= es_write_reg(ES8388_ADDR, ES8388_CONTROL1, 0x16);
    // res |= es_write_reg(ES8388_ADDR, ES8388_CONTROL2, 0x50);
    res |= es_write_reg(ES8388_ADDR, ES8388_CHIPPOWER,
                        0x00);  // start state machine
  }
  if (mode == ES_MODULE_ADC || mode == ES_MODULE_ADC_DAC ||
      mode == ES_MODULE_LINE) {
    res |= es_write_reg(ES8388_ADDR, ES8388_ADCPOWER,
                        0x00);  // power up adc and line in
  }
  if (mode == ES_MODULE_DAC || mode == ES_MODULE_ADC_DAC ||
      mode == ES_MODULE_LINE) {
    res |= es_write_reg(ES8388_ADDR, ES8388_DACPOWER,
                        0x3c);  // power up dac and line out
    res |= es8388_set_voice_mute(false);
    ESP_LOGD(ES_TAG, "es8388_start default is mode:%d", mode);
  }

  return res;
}

int es8388_ctrl_state(audio_hal_codec_mode_t mode,
                      audio_hal_ctrl_t ctrl_state) {
  int res = 0;
  int es_mode_t = 0;
  switch (mode) {
    case AUDIO_HAL_CODEC_MODE_ENCODE:
      es_mode_t = ES_MODULE_ADC;
      break;
    case AUDIO_HAL_CODEC_MODE_LINE_IN:
      es_mode_t = ES_MODULE_LINE;
      break;
    case AUDIO_HAL_CODEC_MODE_DECODE:
      es_mode_t = ES_MODULE_DAC;
      break;
    case AUDIO_HAL_CODEC_MODE_BOTH:
      es_mode_t = ES_MODULE_ADC_DAC;
      break;
    default:
      es_mode_t = ES_MODULE_DAC;
      ESP_LOGW(ES_TAG, "Codec mode not support, default is decode mode");
      break;
  }
  if (AUDIO_HAL_CTRL_STOP == ctrl_state) {
    res = es8388_stop(es_mode_t);
  } else {
    res = es8388_start(es_mode_t);
    ESP_LOGD(ES_TAG, "start default is decode mode:%d", es_mode_t);
  }
  return res;
}
